<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearActivity">

    <TextView
        android:layout_width="380dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="226dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="155dp"
                android:layout_height="153dp"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/btn1"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <TextView
                    android:layout_width="155dp"
                    android:layout_height="153dp"
                    android:background="@color/yellow"
                    android:gravity="center"
                    android:text="@string/btn2"
                    android:textSize="30sp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="380dp"
        android:layout_height="262dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/txt"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/next" />

</LinearLayout>
